feat: add stream health monitoring and auto-recovery
- Add JavaScript interface for bidirectional health monitoring
- Implement 30-second timeout detection with automatic recovery
- Add WebView cleanup between stream changes to prevent memory leaks
- Modify cache settings to prevent memory accumulation
- Add automatic error recovery with 5-second delay
- Implement onPause/onResume lifecycle handlers for better resource management
- Add stream health checking every 10 seconds
- Send heartbeat from JavaScript to Android every 5 seconds
- Enhanced onDestroy with proper cleanup of all handlers and WebView
- Suppress false-positive "unused" warnings on JS interface methods

This addresses silent stream freezing issues where streams would stop
playing without error messages and the app would become unresponsive
to API commands.

Files modified:
- MainActivity.kt (added 120 lines)
- stream.html (added health monitoring JavaScript)

--- a/app/src/main/assets/stream.html
+++ b/app/src/main/assets/stream.html
@@ -500,6 +500,107 @@
                             setTimeout(() => {
                                 reconnectAttempts = 0;
                                 startStream();
+
+            // === HEALTH MONITORING ADDITIONS ===
+
+            // Video element event listeners for health monitoring
+            video.addEventListener('playing', () => {
+                log('Video is playing');
+                updateStatus('Playing');
+                if (window.AndroidInterface) {
+                    try {
+                        window.AndroidInterface.onStreamPlaying();
+                    } catch (e) {
+                        console.error('Failed to send playing event:', e);
+                    }
+                }
+            });
+
+            video.addEventListener('pause', () => {
+                log('Video paused');
+            });
+
+            video.addEventListener('stalled', () => {
+                log('Video stalled', true);
+                if (window.AndroidInterface) {
+                    try {
+                        window.AndroidInterface.onStreamError('Video stalled');
+                    } catch (e) {
+                        console.error('Failed to report stall:', e);
+                    }
+                }
+            });
+
+            video.addEventListener('waiting', () => {
+                log('Video buffering...');
+            });
+
+            video.addEventListener('error', (e) => {
+                const error = video.error;
+                let errorMsg = 'Video error';
+                if (error) {
+                    errorMsg += ': ' + error.code + ' - ' + error.message;
+                }
+                log(errorMsg, true);
+                updateStatus('Video error', true);
+
+                if (window.AndroidInterface) {
+                    try {
+                        window.AndroidInterface.onStreamError(errorMsg);
+                    } catch (err) {
+                        console.error('Failed to report video error:', err);
+                    }
+                }
+            });
+
+            video.addEventListener('loadeddata', () => {
+                log('Video data loaded');
+            });
+
+            video.addEventListener('canplay', () => {
+                log('Video can play');
+            });
+
+            // Heartbeat to Android every 5 seconds
+            setInterval(() => {
+                if (window.AndroidInterface) {
+                    try {
+                        window.AndroidInterface.onStreamPlaying();
+                    } catch (e) {
+                        console.error('Failed to send heartbeat:', e);
+                    }
+                }
+            }, 5000);
+
+            // Monitor video frame updates
+            let lastFrameTime = Date.now();
+            let frameCheckInterval = setInterval(() => {
+                if (video.readyState >= 2) { // HAVE_CURRENT_DATA or better
+                    const now = Date.now();
+                    const timeSinceLastFrame = now - lastFrameTime;
+
+                    if (timeSinceLastFrame > 15000) { // 15 seconds without frames
+                        log('No video frames for ' + (timeSinceLastFrame/1000) + 's', true);
+                        if (window.AndroidInterface) {
+                            try {
+                                window.AndroidInterface.onStreamError('No frames for ' + (timeSinceLastFrame/1000) + 's');
+                            } catch (e) {
+                                console.error('Failed to report frame timeout:', e);
+                            }
+                        }
+                    }
+                    lastFrameTime = now;
+                }
+            }, 10000); // Check every 10 seconds
+
+            // Cleanup on page unload
+            window.addEventListener('beforeunload', () => {
+                clearInterval(frameCheckInterval);
+                cleanup();
+            });
+
+            // === END HEALTH MONITORING ===
+
                             }, 60000);
                         }
                     };
